--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
     <main>
         <section id="telefone">
 
-            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+            <iframe src="home.html" name="tela" id="tela" frameborder="0">
+                Seu navegado não é compatível.
+            </iframe>
 
         </section>
         <section id="redes-sociais">
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a> <br>
+            <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a> <br>
+            <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a> <br>
+            <a href="linkedin.html" target="tela"><img src="imagens/logo-linkedin.png" alt=""></a> <br>
+            <a href="fecebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a>
 
         </section>
     </main>
